kubernetes/camera-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camera-deploy
  labels:
    name: camera-deploy
    app: cc2023w
spec:
  replicas: 1
  selector:
    matchLabels:
      name: camera-pod
      app: cc2023w
  template:
    metadata:
      name: camera-pod
      labels:
        name: camera-pod
        app: cc2023w
    spec:
      containers:
        - name: camera
          image: ccuni/camera-service-2023w
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: camera-service # this is the name of service
  labels:
    name: camera-service
    app: cc2023w
spec:
  type: NodePort
  ports:
    - port: 8001
      targetPort: 80
      nodePort: 30001
  # in order to link the service to the pod, we have to specify same labels configured for pod
  selector:
    name: camera-pod
    app: cc2023w
