kubernetes/collector-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector-deploy
  labels:
    name: collector-deploy
    app: cc2023w
spec:
  replicas: 1
  selector:
    matchLabels:
      name: collector-pod
      app: cc2023w
  template:
    metadata:
      name: collector-pod
      labels:
        name: collector-pod
        app: cc2023w
    spec:
      containers:
        - name: collector
          image: sussap/collector_prac:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: collector-service # this is the name of service
  labels:
    name: collector-service
    app: cc2023w
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 80
  # in order to link the service to the pod, we have to specify same labels configured for pod
  selector:
    name: collector-pod
    app: cc2023w
