kubernetes/face-recognition-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: face-recognition-deploy
  labels:
    name: face-recognition-deploy
    app: cc2023w
spec:
  replicas: 1
  selector:
    matchLabels:
      name: face-recognition-pod
      app: cc2023w
  template:
    metadata:
      name: face-recognition-pod
      labels:
        name: face-recognition-pod
        app: cc2023w
    spec:
      containers:
        - name: face-recognition
          image: ccuni/face-recognition-service-2023w
          ports:
            - containerPort: 80 # the port on which the application listens
---
apiVersion: v1
kind: Service
metadata:
  name: face-recognition-service # this is the name of service
  labels:
    name: face-recognition-service
    app: cc2023w
spec:
  ports:
    - port: 8003
      targetPort: 80
  # in order to link the service to the pod, we have to specify same labels configured for pod
  selector:
    name: face-recognition-pod
    app: cc2023w
