kubernetes/grafana-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: cc2023w
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cc2023w
      name: grafana
  template:
    metadata:
      labels:
        app: cc2023w
        name: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-datasources-volume
              mountPath: /etc/grafana/provisioning/datasources
      volumes:
        - name: grafana-datasources-volume
          configMap:
            name: grafana-datasources
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
    app: cc2023w
spec:
  selector:
    app: cc2023w
    name: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
