kubernetes/prometheus-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deploy
  labels:
    name: prometheus-deploy # Updated name
    app: cc2023w
spec:
  replicas: 1
  selector:
    matchLabels:
      name: prometheus-pod
      app: cc2023w
  template:
    metadata:
      name: prometheus-pod
      labels:
        name: prometheus-pod
        app: cc2023w
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.33.1
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus
            - name: prometheus-storage-volume
              mountPath: /prometheus
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-server-conf
        - name: prometheus-storage-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  labels:
    name: prometheus-service
    app: cc2023w
spec:
  selector:
    name: prometheus-pod
    app: cc2023w
  ports:
    - name: prometheus
      port: 9090
      targetPort: 9090
  type: NodePort
