kubernetes/path-based-ingressrules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cc-ingress-rules
spec:
  ingressClassName: nginx
  rules:
    - host:
      http:
        paths:
          - pathType: Prefix
            path: "/config"
            backend:
              service:
                name: camera-service
                port:
                  number: 8001 # should be camera service port
          - pathType: Prefix
            path: "/frame"
            backend:
              service:
                name: camera-service
                port:
                  number: 8001
          - pathType: Prefix
            path: "/stream"
            backend:
              service:
                name: camera-service
                port:
                  number: 8001
          - pathType: Prefix
            path: "/frame"
            backend:
              service:
                name: collector-service
                port:
                  number: 8000
          # - pathType: Prefix
          #   path: "/frame"
          #   backend:
          #     service:
          #       name: face-recognition-service
          #       port:
          #         number: 8003
          # - pathType: Prefix
          #   path: "/frame"
          #   backend:
          #     service:
          #       name: image-analysis-service
          #       port:
          #         number: 8002
          - pathType: Prefix
            path: "/persons"
            backend:
              service:
                name: section-service
                port:
                  number: 8004
          - pathType: Prefix
            path: "/alerts"
            backend:
              service:
                name: alert-service
                port:
                  number: 8005
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
